fixed color contrast on play button

--- a/lottery.css
+++ b/lottery.css
@@ -203,7 +203,7 @@ span.outcome-label{
 }
 
 button.draw {
-  background-color: #60dfd5;
+  background-color: #4bafa7;
   color: #fff;
   padding: 10px 20px;
   font-size: large;
